# ws_cors

./: Cargo.toml  Readme.md
src/: main.rs
web/: index.html
