[package]
name = "ws_cors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum", branch = "main", features = [
    "ws",
] }
axum-extra = { git = "https://github.com/tokio-rs/axum", branch = "main", features = [
    "typed-header",
] }

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "make"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
